--- a/youtube.html
+++ b/youtube.html
@@ -4,12 +4,17 @@
     <title>Youtube.com Clone</title>
 
     <style>
-      
+      .thumbnail{
+        width: 300px;  
+
+      }
     </style>
   </head>
 
   <body>
     <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
+    <input type="text">
+
   </body>
 
 </html>
