--- a/youtube.html
+++ b/youtube.html
@@ -13,7 +13,7 @@
 
   <body>
     <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
-    <input type="text">
+    <input type="text" placeholder="Search">
 
   </body>
 
