--- a/youtube.html
+++ b/youtube.html
@@ -8,12 +8,16 @@
         width: 300px;  
 
       }
+
+      .search-bar{
+
+      }
     </style>
   </head>
 
   <body>
     <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
-    <input type="text" placeholder="Search">
+    <input class="search-bar" type="text" placeholder="Search">
 
   </body>
 
