--- a/youtube.html
+++ b/youtube.html
@@ -6,19 +6,36 @@
     <style>
       .thumbnail{
         width: 300px;  
-
+        
       }
 
       .search-bar{
 
       }
+
+      .video-title{
+        width: 300px;
+      }
+
+
+
     </style>
   </head>
 
   <body>
     <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
     <input class="search-bar" type="text" placeholder="Search">
+    <p class="video-title">
+      Talking Tech and AI with Google CEO Sundar Pichai!
+    </p>
 
+    <p>
+      Marques Brownlee
+    </p>
+
+    <p>
+      3.4M views &#8226; 6 months ago
+    </p>
   </body>
 
 </html>
