--- a/youtube.html
+++ b/youtube.html
@@ -6,7 +6,7 @@
     <style>
       .thumbnail{
         width: 300px;  
-        
+        display: block;
       }
 
       .search-bar{
@@ -17,23 +17,25 @@
         width: 300px;
       }
 
+  
+
 
 
     </style>
   </head>
 
   <body>
-    <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
     <input class="search-bar" type="text" placeholder="Search">
+    <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
     <p class="video-title">
       Talking Tech and AI with Google CEO Sundar Pichai!
     </p>
 
-    <p>
+    <p class="video-author">
       Marques Brownlee
     </p>
 
-    <p>
+    <p class="video-stats">
       3.4M views &#8226; 6 months ago
     </p>
   </body>
