--- a/youtube.html
+++ b/youtube.html
@@ -17,6 +17,10 @@
         width: 300px;
       }
 
+      .div-example{
+        display: inline-block;
+      }
+
   
 
 
@@ -38,6 +42,10 @@
     <p class="video-stats">
       3.4M views &#8226; 6 months ago
     </p>
+
+    <div class="div-example">
+      this is a div
+    </div>
   </body>
 
 </html>
