--- a/youtube.html
+++ b/youtube.html
@@ -10,15 +10,17 @@
       }
 
       .search-bar{
-
+        display: block;
       }
 
       .video-title{
         width: 300px;
       }
 
-      .div-example{
+      .video-preview{
+        width: 300px;
         display: inline-block;
+        vertical-align: top;
       }
 
   
@@ -30,22 +32,35 @@
 
   <body>
     <input class="search-bar" type="text" placeholder="Search">
-    <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
-    <p class="video-title">
-      Talking Tech and AI with Google CEO Sundar Pichai!
-    </p>
 
-    <p class="video-author">
-      Marques Brownlee
-    </p>
 
-    <p class="video-stats">
-      3.4M views &#8226; 6 months ago
-    </p>
-
-    <div class="div-example">
-      this is a div
+    <div class="video-preview">
+      <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
+      <p class="video-title">
+        Talking Tech and AI with Google CEO Sundar Pichai!
+      </p>
+      <p class="video-author">
+        Marques Brownlee
+      </p>
+      <p class="video-stats">
+        3.4M views &#8226; 6 months ago
+      </p>
     </div>
+
+    <div class="video-preview">
+      <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
+      <p class="video-title">
+        Try Not To Laugh Challenge #9
+      </p>
+      <p class="video-author">
+        Markiplier
+      </p>
+      <p class="video-stats">
+        19M views &#8226; 4 years ago
+      </p>
+    </div>
+
+
   </body>
 
 </html>
