--- a/grid.html
+++ b/grid.html
@@ -41,10 +41,24 @@
     </div>
     
     <div style="background-color: lightpink;">
+      1fr
+    </div>
+  </div>
+
+
+  <div style="margin-top: 30px; display: grid; grid-template-columns: 100px 1fr 1fr;">
+    <div style="background-color: lightblue;">
       100px
     </div>
-
     
-  </div>
+    <div style="background-color: lightpink;">
+      1fr
+    </div>
+
+    <div style="background-color: lightblue;">
+      1fr
+    </div>
+
+
 </body>
 </html>
