--- a/grid.html
+++ b/grid.html
@@ -46,7 +46,7 @@
   </div>
 
 
-  <div style="margin-top: 30px; display: grid; grid-template-columns: 100px 1fr 1fr;">
+  <div style="margin-top: 30px; display: grid; grid-template-columns: 100px 1fr 2fr;">
     <div style="background-color: lightblue;">
       100px
     </div>
@@ -56,9 +56,22 @@
     </div>
 
     <div style="background-color: lightblue;">
-      1fr
+      2fr
     </div>
 
 
+    <div style="margin-top: 30px; display: grid; grid-template-columns: 1fr 1fr 1fr;">
+      <div style="background-color: lightblue;">
+        1fr
+      </div>
+      
+      <div style="background-color: lightpink;">
+        1fr
+      </div>
+  
+      <div style="background-color: lightblue;">
+        1fr
+      </div>
+  
 </body>
 </html>
