--- a/grid.html
+++ b/grid.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Grid</title>
 </head>
-<body>
+<body style="padding-bottom: 1000px;">
   <div style="display: grid; grid-template-columns: 100px 100px;">
     <div style="background-color: lightblue;">
       div1
@@ -30,6 +30,10 @@
     <div style="background-color: lightblue;">
       200px
       <p>text</p>
+    </div>
+
+    <div style="background-color: lightpink;">
+      <p>100px</p>
     </div>
   </div>
 
@@ -59,19 +63,35 @@
       2fr
     </div>
 
-
-    <div style="margin-top: 30px; display: grid; grid-template-columns: 1fr 1fr 1fr;">
-      <div style="background-color: lightblue;">
+    <div style="
+    margin-top: 30px; 
+    display: grid; 
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 20px;
+    row-gap: 40px
+    ;">
+      <div style="background-color: lightblue; height: 200px;">
         1fr
       </div>
       
-      <div style="background-color: lightpink;">
+      <div style="background-color: lightpink; height: 200px;">
         1fr
       </div>
   
-      <div style="background-color: lightblue;">
+      <div style="background-color: lightblue; height: 200px;">
         1fr
       </div>
   
+      <div style="background-color: lightpink; height: 200px;">
+        1f
+      </div>
+  
+      <div style="background-color: lightblue; height: 200px;">
+        1fr
+      </div>
+
+      <div style="background-color: lightpink; height: 200px;">
+        1fr
+      </div>
 </body>
 </html>
