--- a/flexbox.html
+++ b/flexbox.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>flexbox practice</title>
 </head>
-<body>
+<body style="padding-bottom:1000px;">
   <div style="
     display: flex;
     flex-direction: row;">
@@ -24,9 +24,6 @@
 
 
 
-
-
-
   <div style="
     display: flex;
     flex-direction: row;
@@ -39,12 +36,95 @@
     
     <div style="background-color: lightpink;
     flex: 1;">
-      div2
-      <P>
-        flex: 1
-      </P>
+      flex: 1
     </div>
   </div>
+
+
+  
+  <div style="
+    display: flex;
+    flex-direction: row;
+    margin-top: 30px;">
+  
+    
+    <div style="background-color: lightblue;
+    flex: 1;">
+      flex: 1
+    </div>
+
+    <div style="background-color: lightpink;
+    width: 100px;">
+      100px
+    </div>
+
+    <div style="background-color: lightblue;
+    flex: 2;">
+      flex: 2
+    </div>
+
+  </div>
+
+
+
+  <div style="
+  display: flex;
+  flex-direction: row;
+  margin-top: 30px;
+  height: 70px;
+  border-width: 1px;
+  border-color: gray;
+  border-style: solid;
+  justify-content: centre;
+  ">
+
+  <div style="background-color: lightblue;
+  width:100px;">
+    100px
+  </div>
+
+  <div style="background-color: lightpink;
+  width: 100px;">
+    100px
+  </div>
+
+  <div style="background-color: lightblue;
+  width:100px;">
+    100px
+  </div>
+
+</div>
+
+
+<div style="
+display: flex;
+flex-direction: row;
+margin-top: 30px;
+height: 70px;
+border-width: 1px;
+border-color: gray;
+border-style: solid;
+justify-content: centre;
+">
+
+<div style="background-color: lightblue;
+width:100px;">
+  100px
+</div>
+
+<div style="background-color: lightpink;
+width: 100px;">
+  100px
+</div>
+
+<div style="background-color: lightblue;
+width:100px;">
+  100px
+</div>
+
+</div>
+
+
 
 </body>
 </html>
