--- a/flexbox.html
+++ b/flexbox.html
@@ -104,7 +104,8 @@ height: 70px;
 border-width: 1px;
 border-color: gray;
 border-style: solid;
-justify-content: centre;
+justify-content: space-between;
+align-items: center;
 ">
 
 <div style="background-color: lightblue;
