--- a/youtube.html
+++ b/youtube.html
@@ -21,10 +21,10 @@
       <div class="middle-section">
         <input class="search-bar" type="text" placeholder="Search">
         <button class="search-button">
-          <img src="icons/search.svg" alt="">
+          <img class="search-icon" src="icons/search.svg" alt="">
         </button>
         <button class="voice-search-button">
-          <img src="icons/voice-search-icon.svg" alt="">
+          <img class="voice-search-icon" src="icons/voice-search-icon.svg" alt="">
         </button>
       </div>
   
