--- a/youtube.html
+++ b/youtube.html
@@ -29,7 +29,10 @@
       </div>
   
       <div class="right-section">
-        right section
+        <img class="upload-icon" src="/icons/upload.svg" alt="">
+        <img class="youtube-apps-icon" src="/icons/youtube-apps.svg" alt="">
+        <img class="notifications-icon" src="/icons/notifications.svg" alt="">
+        <img class="user-picture" src="/channel-pictures/Tareq-channel.jpg" alt="">
       </div>
     </div>
 
