--- a/intro-to-html/exercises/13d.html
+++ b/intro-to-html/exercises/13d.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>13c</title>
+  <title>13d</title>
   <link rel="stylesheet" href="13d.css">
 </head>
 <body>
