--- a/position.html
+++ b/position.html
@@ -7,7 +7,8 @@
 </head>
 <body style="
 height: 2000px;
-padding-top: 60px;">
+padding-top: 60px;
+padding-left: 80px;">
 
   <div style="
     background-color: black;
@@ -17,8 +18,18 @@ padding-top: 60px;">
     right: 0px;
     left: 0px;
     height:50px;">
-    
     header
+  </div>
+
+  <div style="
+  background-color: green;
+  color: white;
+  position: fixed;
+  left: 0px;
+  bottom: 0px;
+  top: 50px;
+  width: 72px;">
+    sidebar
   </div>
 
   <div style="
