--- a/youtube.html
+++ b/youtube.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/general.css">
     <link rel="stylesheet" href="styles/video.css">
     <link rel="stylesheet" href="styles/header.css">
+    <link rel="stylesheet" href="styles/sidebar.css">
   </head>
 
   <body>
@@ -34,6 +35,11 @@
         <img class="notifications-icon" src="/icons/notifications.svg" alt="">
         <img class="user-picture" src="/channel-pictures/Tareq-channel.jpg" alt="">
       </div>
+    </div>
+
+
+    <div class="sidebar">
+      sidebar
     </div>
 
 
