--- a/position.html
+++ b/position.html
@@ -17,7 +17,8 @@ padding-left: 80px;">
     top: 0px;
     right: 0px;
     left: 0px;
-    height:50px;">
+    height:50px;
+    z-index: 100;">
     header
   </div>
 
@@ -30,6 +31,16 @@ padding-left: 80px;">
   top: 50px;
   width: 72px;">
     sidebar
+  </div>
+
+  <div style="
+  position: absolute;
+  background-color: red;
+  right: 10px;
+  top: 60px;
+  color: white;
+  ">
+    absolute
   </div>
 
   <div style="
