--- a/position.html
+++ b/position.html
@@ -31,6 +31,17 @@ padding-left: 80px;">
   top: 50px;
   width: 72px;">
     sidebar
+
+    <div style="
+    position: absolute;
+    background-color: red;
+    right: 0px;
+    top: 0px;
+    color: white;
+    ">
+      X
+    </div>
+
   </div>
 
   <div style="
@@ -55,8 +66,19 @@ padding-left: 80px;">
   <div style="
   background-color: lightpink;
   width: 200px;
-  height: 200px;">
+  height: 200px;
+  position: relative;">
     div2
+
+    <div style="
+    position: absolute;
+    background-color: black;
+    right: 10px;
+    bottom: 10px;
+    color: white;
+    ">
+      5:00
+    </div>
   </div>
 </body>
 </html>
