--- a/youtube.html
+++ b/youtube.html
@@ -32,7 +32,11 @@
       <div class="right-section">
         <img class="upload-icon" src="/icons/upload.svg" alt="">
         <img class="youtube-apps-icon" src="/icons/youtube-apps.svg" alt="">
-        <img class="notifications-icon" src="/icons/notifications.svg" alt="">
+        <div class="notifications-icon-container">
+          <img class="notifications-icon" src="/icons/notifications.svg" alt="">
+          <div class="notifications-count">3</div>
+        </div>
+
         <img class="user-picture" src="/channel-pictures/Tareq-channel.jpg" alt="">
       </div>
     </div>
