--- a/youtube.html
+++ b/youtube.html
@@ -23,14 +23,20 @@
         <input class="search-bar" type="text" placeholder="Search">
         <button class="search-button">
           <img class="search-icon" src="icons/search.svg" alt="">
+          <div class="tooltip">Search</div>
         </button>
         <button class="voice-search-button">
           <img class="voice-search-icon" src="icons/voice-search-icon.svg" alt="">
+          <div class="tooltip">Search with your voice</div>
         </button>
       </div>
   
       <div class="right-section">
-        <img class="upload-icon" src="/icons/upload.svg" alt="">
+        <div class="upload-icon-container">
+          <img class="upload-icon" src="/icons/upload.svg" alt="">
+          <div class="tooltip">Create</div>
+        </div>
+        
         <img class="youtube-apps-icon" src="/icons/youtube-apps.svg" alt="">
         <div class="notifications-icon-container">
           <img class="notifications-icon" src="/icons/notifications.svg" alt="">
