--- a/youtube.html
+++ b/youtube.html
@@ -36,11 +36,16 @@
           <img class="upload-icon" src="/icons/upload.svg" alt="">
           <div class="tooltip">Create</div>
         </div>
+
+        <div class="youtube-apps-icon-container">
+          <img class="youtube-apps-icon" src="/icons/youtube-apps.svg" alt="">
+          <div class="tooltip">YouTube apps</div>
+        </div>
         
-        <img class="youtube-apps-icon" src="/icons/youtube-apps.svg" alt="">
         <div class="notifications-icon-container">
           <img class="notifications-icon" src="/icons/notifications.svg" alt="">
           <div class="notifications-count">3</div>
+          <div class="tooltip">Notifications</div>
         </div>
 
         <img class="user-picture" src="/channel-pictures/Tareq-channel.jpg" alt="">
