--- a/index.html
+++ b/index.html
@@ -37,49 +37,49 @@
   
       <div class="right-section">
         <div class="upload-icon-container">
-          <img class="upload-icon" src="/icons/upload.svg" alt="">
+          <img class="upload-icon" src="icons/upload.svg" alt="">
           <div class="tooltip">Create</div>
         </div>
 
         <div class="youtube-apps-icon-container">
-          <img class="youtube-apps-icon" src="/icons/youtube-apps.svg" alt="">
+          <img class="youtube-apps-icon" src="icons/youtube-apps.svg" alt="">
           <div class="tooltip">YouTube apps</div>
         </div>
         
         <div class="notifications-icon-container">
-          <img class="notifications-icon" src="/icons/notifications.svg" alt="">
+          <img class="notifications-icon" src="icons/notifications.svg" alt="">
           <div class="notifications-count">3</div>
           <div class="tooltip">Notifications</div>
         </div>
 
-        <img class="user-picture" src="/channel-pictures/Tareq-channel.jpg" alt="">
+        <img class="user-picture" src="channel-pictures/Tareq-channel.jpg" alt="">
       </div>
     </header>
 
 
     <nav class="sidebar">
       <div class="sidebar-link">
-        <img src="/icons/home.svg" alt="">
+        <img src="icons/home.svg" alt="">
         <div>Home</div>
       </div>
       <div class="sidebar-link">
-        <img src="/icons/explore.svg" alt="">
+        <img src="icons/explore.svg" alt="">
         <div>Explore</div>
       </div>
       <div class="sidebar-link">
-        <img src="/icons/subscriptions.svg" alt="">
+        <img src="icons/subscriptions.svg" alt="">
         <div>Subscriptions</div>
       </div>
       <div class="sidebar-link">
-        <img src="/icons/originals.svg" alt="">
+        <img src="icons/originals.svg" alt="">
         <div>Originals</div>
       </div>
       <div class="sidebar-link">
-        <img src="/icons/youtube-music.svg" alt="">
+        <img src="icons/youtube-music.svg" alt="">
         <div>YouTube Music</div>
       </div>
       <div class="sidebar-link">
-        <img src="/icons/library.svg" alt="">
+        <img src="icons/library.svg" alt="">
         <div>Library</div>
       </div>
     </nav>
